SECURITY: Revert to manual approval - prevent fake garage accounts
- Garages register as 'pending', require admin verification
- Plan selector kept but captures intent only (preferred_plan_code)
- Success screen shows verification message (24-48 hours)
- Admin must verify CR/Trade License before activation
- Fixed admin dashboard to show plan_name from subscription_plans

--- a/public/partners.html
+++ b/public/partners.html
@@ -2280,23 +2280,25 @@
                     </svg>
                 </div>
                 <h3 data-i18n="success.title">Application Submitted! 🎉</h3>
-                <p data-i18n="success.message">Thank you for registering. Our team will review your application and
-                    contact you shortly.</p>
+                <p data-i18n="success.message">Thank you for registering! We're reviewing your business details and will
+                    activate your account shortly.</p>
 
                 <div class="success-details">
                     <p><strong data-i18n="success.garage">Garage:</strong> <span id="successGarageName"></span></p>
-                    <p><strong data-i18n="success.phone">Phone:</strong> <span id="successPhone"></span></p>
+                    <p><strong data-i18n="success.phone">Phone (Login):</strong> <span id="successPhone"></span></p>
+                    <p><strong data-i18n="success.plan">Selected Plan:</strong> <span id="successPlanName">Pay-Per-Sale
+                            (15%)</span></p>
                     <p><strong data-i18n="success.submitted">Submitted:</strong> <span id="successTimestamp"></span></p>
                 </div>
 
                 <p style="font-size: 14px; color: var(--charcoal); margin-bottom: 24px;">
                     <strong data-i18n="success.whatsNext">What's Next?</strong><br>
-                    <span data-i18n="success.step1">✅ We'll review your application</span><br>
-                    <span data-i18n="success.step2">✅ You'll receive a callback within 24-48 hours</span><br>
-                    <span data-i18n="success.step3">✅ Once approved, you can login to your dashboard</span>
+                    <span data-i18n="success.step1">✅ We'll verify your CR/Trade License</span><br>
+                    <span data-i18n="success.step2">✅ Approval within 24-48 hours</span><br>
+                    <span data-i18n="success.step3">✅ Login with your phone & password once approved</span>
                 </p>
 
-                <a href="/garage-dashboard.html" class="btn-secondary">
+                <a href="/garage-login.html" class="btn-secondary">
                     <span data-i18n="success.portalBtn">Go to Partner Portal</span>
                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                         <line x1="5" y1="12" x2="19" y2="12"></line>
