chore(ui): remove duplicate QScrap text from dashboard sidebars and login pages
- garage-dashboard: Sidebar uses logo+badge, login says 'Partner Portal'
- admin-dashboard: Sidebar uses logo+badge, login says 'Admin Portal'
- operations-dashboard: Sidebar uses logo+subtitle, login says 'Operations Center'
- finance-dashboard: Sidebar uses logo+subtitle, login says 'Finance Center'
- support-dashboard: Sidebar uses logo+subtitle, login says 'Support Hub'

Logo already contains 'QScrap' text - no duplication needed (DRY principle)

--- a/public/admin-dashboard.html
+++ b/public/admin-dashboard.html
@@ -28,8 +28,8 @@
         <div class="auth-card">
             <div class="auth-header">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="auth-logo">
-                <h1>QScrap Admin</h1>
-                <p>Platform Management Console</p>
+                <h1>Admin Portal</h1>
+                <p>Platform Management</p>
             </div>
             <form id="loginForm" autocomplete="off">
                 <div class="form-group">
@@ -56,7 +56,6 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo">
-                <h2>QScrap</h2>
                 <span class="admin-badge">ADMIN</span>
             </div>
             <nav class="sidebar-nav">
