--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -333,8 +333,8 @@
         <div class="login-card">
             <div class="login-logo">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="auth-logo-img">
-                <h1>QScrap</h1>
-                <p>Garage Partner Portal</p>
+                <h1>Partner Portal</h1>
+                <p>Garage Dashboard</p>
             </div>
 
             <div class="auth-tabs" style="display: flex; gap: 8px; margin-bottom: 24px;">
@@ -454,7 +454,6 @@
         <aside class="sidebar">
             <div class="sidebar-header">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
-                <h2 class="sidebar-brand">QScrap</h2>
                 <span class="partner-badge">PARTNER</span>
             </div>
             <div class="sidebar-subtitle">Garage Partner Portal</div>
