--- a/public/operations-dashboard.html
+++ b/public/operations-dashboard.html
@@ -35,7 +35,7 @@
             <div class="login-header">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Operations Center</h1>
-                <p class="login-subtitle">QScrap Internal Dashboard</p>
+                <p class="login-subtitle">Internal Dashboard</p>
             </div>
             <form id="loginForm" autocomplete="off">
                 <div class="form-group">
@@ -64,10 +64,7 @@
             <div class="sidebar-header">
                 <div class="sidebar-logo">
                     <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
-                    <div>
-                        <div class="logo-text">QScrap</div>
-                        <div class="logo-subtitle">Operations</div>
-                    </div>
+                    <div class="logo-subtitle">Operations</div>
                 </div>
             </div>
 
