--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -49,7 +49,7 @@
             <div class="login-header">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Finance Center</h1>
-                <p class="login-subtitle">Payout & Revenue Management</p>
+                <p class="login-subtitle">Payout & Revenue</p>
             </div>
             <form id="loginForm" autocomplete="off">
                 <div class="form-group">
@@ -76,10 +76,7 @@
             <div class="sidebar-header">
                 <div class="sidebar-logo">
                     <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
-                    <div>
-                        <div class="logo-text">QScrap</div>
-                        <div class="logo-subtitle">Finance</div>
-                    </div>
+                    <div class="logo-subtitle">Finance</div>
                 </div>
             </div>
 
