--- a/public/support-dashboard.html
+++ b/public/support-dashboard.html
@@ -789,7 +789,7 @@
             <div class="login-header">
                 <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="login-logo">
                 <h1 class="login-title">Support Hub</h1>
-                <p class="login-subtitle">QScrap Customer Resolution</p>
+                <p class="login-subtitle">Customer Resolution</p>
             </div>
             <form id="loginForm" autocomplete="off">
                 <div class="form-group">
@@ -818,10 +818,7 @@
             <div class="sidebar-header">
                 <div class="sidebar-logo">
                     <img src="assets/images/qscrap-logo.png?v=2026" alt="QScrap" class="sidebar-logo-img">
-                    <div>
-                        <div class="logo-text">QScrap</div>
-                        <div class="logo-subtitle">Support</div>
-                    </div>
+                    <div class="logo-subtitle">Support</div>
                 </div>
             </div>
 
