fix(i18n): RTL phone number display and Arabic numeral cleanup
- Replace Arabic percent signs (٪) with English (%) in legal-pages.js
- Add dir='ltr' to all phone number links for correct RTL display
- Fix star position in Arabic rating (★4.8 → displays as 4.8★ in RTL)
- Update footer phone translations with LTR spans
- Apply fixes across: index.html, about.html, partners.html, website.html
- Update JS translations: homepage.js, about.js, partners.js, legal-pages.js

Enforces 'English Numerals Mandatory' i18n standard

--- a/public/partners.html
+++ b/public/partners.html
@@ -2349,7 +2349,7 @@
                     <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
                         <li><a href="mailto:support@qscrap.qa">📧 support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974">📞 +974 5026 7974</a></li>
+                        <li><a href="tel:+97450267974" dir="ltr">📞 +974 5026 7974</a></li>
                         <li><a href="https://wa.me/97450267974" target="_blank"><span data-i18n="footer.whatsapp">💬
                                     WhatsApp Support</span></a></li>
                     </ul>
