--- a/public/about.html
+++ b/public/about.html
@@ -1342,12 +1342,12 @@
                     </p>
                     <p data-i18n="info.contact.mobile">
                         <strong>Mobile:</strong><br>
-                        <a href="tel:+97450267974">+974 5026 7974</a><br>
-                        <a href="tel:+97455906912">+974 5590 6912</a>
+                        <a href="tel:+97450267974" dir="ltr">+974 5026 7974</a><br>
+                        <a href="tel:+97455906912" dir="ltr">+974 5590 6912</a>
                     </p>
                     <p data-i18n="info.contact.landline">
                         <strong>Landline:</strong><br>
-                        +974 4455 4444
+                        <span dir="ltr">+974 4455 4444</span>
                     </p>
                     <p data-i18n="info.contact.hours">
                         <strong>Business Hours:</strong><br>
@@ -1438,7 +1438,7 @@
                     <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
                         <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email">📧 support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974" data-i18n="footer.phone">📞 +974 5026 7974</a></li>
+                        <li><a href="tel:+97450267974" dir="ltr" data-i18n="footer.phone">📞 +974 5026 7974</a></li>
                         <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp">💬 WhatsApp
                                 Support</a></li>
                     </ul>
