--- a/public/index.html
+++ b/public/index.html
@@ -991,7 +991,7 @@
                     <h4 class="footer-title" data-i18n="footer.contactTitle">Contact</h4>
                     <ul class="footer-links">
                         <li><a href="mailto:support@qscrap.qa" data-i18n="footer.email">📧 support@qscrap.qa</a></li>
-                        <li><a href="tel:+97450267974" data-i18n="footer.phone">📞 +974 5026 7974</a></li>
+                        <li><a href="tel:+97450267974" dir="ltr" data-i18n="footer.phone">📞 +974 5026 7974</a></li>
                         <li><a href="https://wa.me/97450267974" target="_blank" data-i18n="footer.whatsapp">💬 WhatsApp
                                 Support</a></li>
                     </ul>
