--- a/public/garage-dashboard.html
+++ b/public/garage-dashboard.html
@@ -766,7 +766,7 @@
 
                 <!-- Summary Stats -->
                 <div class="pending-actions-summary"
-                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 16px; margin-bottom: 24px;">
+                    style="display: grid; grid-template-columns: repeat(auto-fit, minmax(180px, 1fr)); gap: 16px; margin-bottom: 24px;">
                     <div class="summary-card"
                         style="background: linear-gradient(135deg, rgba(249, 115, 22, 0.15) 0%, rgba(239, 68, 68, 0.1) 100%); border: 1px solid rgba(249, 115, 22, 0.3); border-radius: 16px; padding: 20px;">
                         <div style="display: flex; align-items: center; gap: 12px;">
@@ -778,6 +778,21 @@
                                 <div id="counterOfferCount"
                                     style="font-size: 28px; font-weight: 700; color: var(--text-primary);">0</div>
                                 <div style="font-size: 13px; color: var(--text-secondary);">Counter-Offers</div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Flagged Bids Card -->
+                    <div class="summary-card"
+                        style="background: linear-gradient(135deg, rgba(239, 68, 68, 0.15) 0%, rgba(220, 38, 38, 0.1) 100%); border: 1px solid rgba(239, 68, 68, 0.3); border-radius: 16px; padding: 20px;">
+                        <div style="display: flex; align-items: center; gap: 12px;">
+                            <div
+                                style="width: 48px; height: 48px; background: linear-gradient(135deg, #ef4444 0%, #dc2626 100%); border-radius: 12px; display: flex; align-items: center; justify-content: center;">
+                                <i class="bi bi-flag-fill" style="font-size: 24px; color: white;"></i>
+                            </div>
+                            <div>
+                                <div id="flaggedBidCount"
+                                    style="font-size: 28px; font-weight: 700; color: var(--text-primary);">0</div>
+                                <div style="font-size: 13px; color: var(--text-secondary);">Flagged Bids</div>
                             </div>
                         </div>
                     </div>
