fix(partners): Improve RTL support for FAQ cards - emoji position, text alignment

--- a/public/partners.html
+++ b/public/partners.html
@@ -1673,6 +1673,10 @@
         }
 
         /* RTL FAQ Support */
+        html[dir="rtl"] .faq-item {
+            direction: rtl;
+        }
+
         html[dir="rtl"] .faq-question {
             flex-direction: row-reverse;
         }
@@ -1680,10 +1684,22 @@
         html[dir="rtl"] .faq-question h3 {
             flex-direction: row-reverse;
             text-align: right;
+            justify-content: flex-end;
+        }
+
+        html[dir="rtl"] .faq-question h3 .faq-emoji {
+            order: 1;
+            margin-right: 0;
+            margin-left: 12px;
         }
 
         html[dir="rtl"] .faq-answer-content {
             text-align: right;
+            direction: rtl;
+        }
+
+        html[dir="rtl"] .faq-answer-content .highlight-stat {
+            direction: rtl;
         }
 
         /* ===== Trust Strip ===== */
