--- a/public/website.html
+++ b/public/website.html
@@ -60,7 +60,7 @@
         },
         "contactPoint": {
             "@type": "ContactPoint",
-            "telephone": "+974-4455-4444",
+            "telephone": "+974-5026-7974",
             "contactType": "customer service",
             "email": "support@qscrap.qa"
         }
@@ -447,7 +447,7 @@
                             <span class="store-btn-big">App Store</span>
                         </div>
                     </a>
-                    <a href="https://play.google.com/store/apps/details?id=qa.qscrap.customer" class="store-btn"
+                    <a href="https://play.google.com/store/apps/details?id=qa.qscrap.app" class="store-btn"
                         target="_blank" rel="noopener">
                         <svg width="32" height="32" viewBox="0 0 24 24" fill="currentColor">
                             <path
@@ -517,7 +517,7 @@
                     <ul>
                         <li><a href="/privacy.html">Privacy Policy</a></li>
                         <li><a href="/terms.html">Terms of Service</a></li>
-                        <li><a href="/refunds">Refund Policy</a></li>
+                        <li><a href="/refund.html">Refund Policy</a></li>
                     </ul>
                 </div>
 
@@ -539,13 +539,13 @@
                 </div>
 
                 <div class="footer-contact">
-                    <a href="tel:+97444554444" dir="ltr">
+                    <a href="tel:+97450267974" dir="ltr">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
                             stroke-width="2">
                             <path
                                 d="M22 16.92v3a2 2 0 0 1-2.18 2 19.79 19.79 0 0 1-8.63-3.07 19.5 19.5 0 0 1-6-6 19.79 19.79 0 0 1-3.07-8.67A2 2 0 0 1 4.11 2h3a2 2 0 0 1 2 1.72 12.84 12.84 0 0 0 .7 2.81 2 2 0 0 1-.45 2.11L8.09 9.91a16 16 0 0 0 6 6l1.27-1.27a2 2 0 0 1 2.11-.45 12.84 12.84 0 0 0 2.81.7A2 2 0 0 1 22 16.92z" />
                         </svg>
-                        +974 4455 4444
+                        +974 5026 7974
                     </a>
                     <a href="mailto:support@qscrap.qa">
                         <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor"
