fix: deep audit alignment - social handles, business hours, broken links, App Store ID
Cross-platform consistency fixes (Round 2):

Social Media Handles (unified to qscrap.qa format):
- website.html: facebook/instagram/twitter links (social icons + footer)
- index.html: schema.org sameAs + twitter:site meta tag
- contacts.ts: twitter handle qscrap_qa → qscrap.qa

Business Hours (corrected to real schedule):
- Sun-Thu: 8:00 AM - 5:00 PM
- Saturday: 8:00 AM - 3:00 PM
- Friday: Closed
- Fixed in: about.js (EN+AR), about.html, index.html schema.org, contacts.ts

Broken Links Fixed:
- website.html footer: /about→/about.html, /careers→/partners.html,
  /faq→#how-it-works, /contact→/about.html#contact

App Store & Legal URLs:
- contacts.ts: Placeholder App Store ID id123456789 → id6740043847
- contacts.ts: Cookie policy from non-existent /cookies → /terms.html

--- a/public/about.html
+++ b/public/about.html
@@ -1351,8 +1351,9 @@
                     </p>
                     <p data-i18n="info.contact.hours">
                         <strong>Business Hours:</strong><br>
-                        Saturday - Thursday<br>
-                        8:00 AM - 8:00 PM (Qatar Time)
+                        Sunday - Thursday: 8:00 AM - 5:00 PM<br>
+                        Saturday: 8:00 AM - 3:00 PM<br>
+                        Friday: Closed
                     </p>
                 </div>
                 <div class="info-card reveal">
