--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:site" content="@qscrapqa">
+    <meta name="twitter:site" content="@qscrap.qa">
     <meta name="twitter:title" content="QScrap - Qatar's #1 Automotive Parts Marketplace">
     <meta name="twitter:description"
         content="Find new, used, and genuine OEM automotive parts in Qatar. Same-day delivery across Doha.">
@@ -99,15 +99,21 @@
         "openingHoursSpecification": [
             {
                 "@type": "OpeningHoursSpecification",
-                "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Sunday"],
+                "dayOfWeek": ["Sunday", "Monday", "Tuesday", "Wednesday", "Thursday"],
                 "opens": "08:00",
-                "closes": "22:00"
+                "closes": "17:00"
+            },
+            {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": ["Saturday"],
+                "opens": "08:00",
+                "closes": "15:00"
             }
         ],
         "sameAs": [
             "https://instagram.com/qscrap.qa",
-            "https://facebook.com/qscrapqa",
-            "https://twitter.com/qscrapqa",
+            "https://facebook.com/qscrap.qa",
+            "https://twitter.com/qscrap.qa",
             "https://wa.me/97450267974"
         ],
         "contactPoint": {
