style: add green accent to Net Revenue card in revenue report

--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -593,8 +593,8 @@
                         <div class="stat-value" id="revPlatformFees">0 QAR</div>
                         <div class="stat-label">Platform Fees</div>
                     </div>
-                    <div class="stat-card">
-                        <div class="stat-value" id="revNetRevenue">0 QAR</div>
+                    <div class="stat-card" style="background: rgba(16, 185, 129, 0.08); border-left: 4px solid rgba(16, 185, 129, 0.5);">
+                        <div class="stat-value" id="revNetRevenue" style="color: #059669;">0 QAR</div>
                         <div class="stat-label">Net Revenue</div>
                     </div>
                 </div>
