--- a/public/finance-dashboard.html
+++ b/public/finance-dashboard.html
@@ -620,6 +620,18 @@
                         </div>
                     </div>
                 </div>
+
+                <!-- Revenue Trend Chart -->
+                <div class="content-card" style="margin-top: 16px;">
+                    <div
+                        style="display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px;">
+                        <h3 style="margin: 0; font-size: 15px; font-weight: 600;"><i class="bi bi-bar-chart"
+                                style="color: var(--accent); margin-right: 6px;"></i>Daily Revenue Trend</h3>
+                        <span style="font-size: 12px; color: var(--text-secondary);" id="revTrendPeriod"></span>
+                    </div>
+                    <div id="revenueTrendChart" style="display: flex; align-items: flex-end; gap: 4px; height: 120px;">
+                    </div>
+                </div>
             </section>
 
             <!-- Pending Refunds Section (Finance Approval Queue) -->
@@ -1071,7 +1083,7 @@
     <script src="js/shared/toast.js?v=20260115d"></script>
     <script src="js/shared/modal.js?v=20260115d"></script>
     <script src="js/pagination-utils.js?v=20260115d"></script>
-    <script src="js/finance-dashboard.js?v=20260213a"></script>
+    <script src="js/finance-dashboard.js?v=20260213b"></script>
 </body>
 
 </html>
